[build-system]
requires = ["setuptools>=61,<77"]
build-backend = "setuptools.build_meta"

[project]
name = "mkdocs-robust-chat"
version = "0.1.0"
description = "Render chat code blocks as modern chat threads in mkdocs-material."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.md"}
authors = [{ name = "greysondn" }]
keywords = ["mkdocs", "mkdocs-plugin", "mkdocs-material", "chat", "superfences", "ai-generated", "llm-generated-code"]
dependencies = [
    "mkdocs>=1.4",
    "markdown>=3.3",
    "pymdown-extensions>=9.0",
]

[project.urls]
Homepage = "https://github.com/greysondn/mkdocs-robust-chat"
Source = "https://github.com/greysondn/mkdocs-robust-chat"

[project.entry-points."mkdocs.plugins"]
"robust-chat" = "robust_chat.plugin:RobustChatPlugin"

[tool.setuptools]
packages = ["robust_chat", "robust_chat.assets"]

[tool.setuptools.package-data]
"robust_chat.assets" = ["*.css", "*.js"]

